--- a/fxml/style/style.css
+++ b/fxml/style/style.css
@@ -1,3 +1,8 @@
+
+.main-anchorpane{
+    -fx-background-color: #1F1F1F;
+}
+
 .nav{
     -fx-background-color: #141414;
 }
@@ -11,11 +16,11 @@
 .input{
     -fx-border-color: #868686;
     -fx-border-width: 2px;
-    -fx-border-radius: 5px;
+    -fx-border-radius: 10px;
 }
 
 .outline1{
-    -fx-border-color: #505050 transparent #505050 transparent;
+    -fx-border-color: #505050 transparent transparent transparent;
     -fx-border-width: 2px;
     -fx-background-color: transparent;
 }
@@ -24,19 +29,95 @@
     -fx-text-fill: #c0c0c0;
 }
 
-.scroll-pane{
+.scroll-pane {
     -fx-background-color: transparent;
 }
 
-.scroll-pane .viewport, .scroll-pane > .corner, .scroll-pane > .track{
+.scroll-pane .viewport {
     -fx-background-color: transparent;
 }
 
-.scroll-pane > .increment-button, .scroll-pane > .decrement-button{
+.scroll-bar {
     -fx-background-color: transparent;
 }
 
-.scroll-pane .thumb{
+.scroll-bar .thumb {
     -fx-background-color: #868686;
     -fx-background-radius: 0px;
+}
+
+.scroll-bar .track {
+    -fx-background-color: transparent;
+}
+
+.scroll-bar .increment-button,
+.scroll-bar .decrement-button {
+    -fx-background-color: transparent;
+}
+
+.scroll-pane .corner {
+    -fx-background-color: transparent;
+}
+
+.section1{
+    -fx-background-color: transparent;
+    -fx-padding: 0 2 0 10;
+}
+
+.description{
+    -fx-opacity: 0.7;
+}
+
+.check-box .box{
+    -fx-background-radius: 50%;
+    -fx-border-color: #cacaca;
+    -fx-border-width: 2px;
+    -fx-border-radius: 50%;
+    -fx-background-color: #666666;
+    -fx-scale-x: 0.7;
+    -fx-scale-y: 0.7;
+    -fx-opacity: 0.5;
+}
+
+.split-pane-divider {
+   -fx-background-color: transparent;
+   -fx-cursor: w-resize;
+}
+.split-pane{
+    -fx-border-width: 0;
+    -fx-padding: 0;
+    -fx-background-color: transparent;
+}
+
+.word-list-item:hover{
+    -fx-background-color: #727272;
+}
+
+.home-choice{
+    -fx-border-width: 3px;
+    -fx-border-radius: 20px;
+    -fx-background-radius: 20px;
+}
+
+.home-choice:hover{
+    -fx-background-color: #727272;
+}
+
+.hidden-button{
+    -fx-background-color: transparent;
+    -fx-border-color: transparent;
+    -fx-padding: 0;
+}
+
+.tab-pane .tab{
+    -fx-background-color: transparent;
+    -fx-border-color: #505050;
+    -fx-border-width: 2px 2px 0px 2px;
+    -fx-border-radius: 10px 10px 0px 0px;
+    -fx-background-radius: 10px 10px 0px 0px;
+    -fx-margin: 20px
+}
+
+.tab-pane .tab-header-background{
+    -fx-background-color: #141414
 }
