--- a/fxml/template.fxml
+++ b/fxml/template.fxml
@@ -622,68 +622,80 @@
             <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
                <children>
                   <GridPane alignment="CENTER" hgap="10.0" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="300.0" prefWidth="400.0" vgap="10.0">
-                    <columnConstraints>
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     <columnConstraints>
                         <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                    </columnConstraints>
-                    <rowConstraints>
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                    </rowConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
                      <children>
-                        <VBox alignment="CENTER" spacing="5.0" style="-fx-border-color: #62b8ff;" styleClass="home-choice" GridPane.columnIndex="1">
-                           <children>
-                              <ImageView fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@icons/create_word.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="text-color1" text="Create Word" textAlignment="CENTER" textFill="WHITE" underline="true">
-                                 <font>
-                                    <Font name="Inter Regular" size="14.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                           </padding>
-                        </VBox>
-                        <VBox alignment="CENTER" spacing="5.0" style="-fx-border-color: #ffb662;" styleClass="home-choice" GridPane.columnIndex="2">
-                           <children>
-                              <ImageView fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@icons/type.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="text-color1" text="Create Type" textAlignment="CENTER" textFill="WHITE" underline="true">
-                                 <font>
-                                    <Font name="Inter Regular" size="14.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                           </padding>
-                        </VBox>
-                        <VBox alignment="CENTER" spacing="5.0" style="-fx-border-color: #f262ff;" styleClass="home-choice">
-                           <children>
-                              <ImageView fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@icons/letters.png" />
-                                 </image>
-                              </ImageView>
-                              <Label styleClass="text-color1" text="Create Letter" textAlignment="CENTER" textFill="WHITE" underline="true">
-                                 <font>
-                                    <Font name="Inter Regular" size="14.0" />
-                                 </font>
-                              </Label>
-                           </children>
-                           <padding>
-                              <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
-                           </padding>
-                        </VBox>
+                        <Button alignment="CENTER" contentDisplay="CENTER" maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createLetter" GridPane.halignment="CENTER" GridPane.valignment="CENTER">
+                           <graphic>
+                              <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" minWidth="-Infinity" spacing="5.0" style="-fx-border-color: #f262ff;" styleClass="home-choice">
+                                 <children>
+                                    <ImageView fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@icons/letters.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Label styleClass="text-color1" text="Create Letter" textAlignment="CENTER" textFill="WHITE" underline="true">
+                                       <font>
+                                          <Font name="Inter Regular" size="14.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+                                 </padding>
+                              </VBox>
+                           </graphic>
+                        </Button>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createWord" GridPane.columnIndex="1">
+                           <graphic>
+                              <VBox alignment="CENTER" maxWidth="1.7976931348623157E308" spacing="5.0" style="-fx-border-color: #62b8ff;" styleClass="home-choice">
+                                 <children>
+                                    <ImageView fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@icons/create_word.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Label styleClass="text-color1" text="Create Word" textAlignment="CENTER" textFill="WHITE" underline="true">
+                                       <font>
+                                          <Font name="Inter Regular" size="14.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+                                 </padding>
+                              </VBox>
+                           </graphic>
+                        </Button>
+                        <Button maxWidth="1.7976931348623157E308" mnemonicParsing="false" onAction="#createType" GridPane.columnIndex="2">
+                           <graphic>
+                              <VBox alignment="CENTER" spacing="5.0" style="-fx-border-color: #ffb662;" styleClass="home-choice">
+                                 <children>
+                                    <ImageView fitHeight="52.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@icons/type.png" />
+                                       </image>
+                                    </ImageView>
+                                    <Label styleClass="text-color1" text="Create Type" textAlignment="CENTER" textFill="WHITE" underline="true">
+                                       <font>
+                                          <Font name="Inter Regular" size="14.0" />
+                                       </font>
+                                    </Label>
+                                 </children>
+                                 <padding>
+                                    <Insets bottom="10.0" left="10.0" right="10.0" top="5.0" />
+                                 </padding>
+                              </VBox>
+                           </graphic>
+                        </Button>
                      </children>
                   </GridPane>
                </children>
