--- a/fxml/template.fxml
+++ b/fxml/template.fxml
@@ -25,9 +25,12 @@
    <children>
       <HBox alignment="CENTER_LEFT" prefHeight="60.0" spacing="20.0" styleClass="header" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <HBox alignment="CENTER" spacing="20.0">
+            <HBox alignment="CENTER" spacing="10.0">
                <children>
-                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fitHeight="50.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icons/logo.png" />
+                     </image></ImageView>
                   <HBox alignment="CENTER">
                      <children>
                         <Label text="Lang" textFill="#ababab">
@@ -35,7 +38,7 @@
                               <Font size="18.0" />
                            </font>
                         </Label>
-                        <Label text="Builder" textFill="#ca67ff">
+                        <Label text="Builder" textFill="#dea2ff">
                            <font>
                               <Font name="Inter Regular" size="18.0" />
                            </font>
