début de la vue des editors

--- a/app/class/fxml/static/header_nav.fxml
+++ b/app/class/fxml/static/header_nav.fxml
@@ -131,10 +131,10 @@
                            <children>
                               <HBox alignment="CENTER_LEFT" styleClass="input">
                                  <children>
-                                    <TextField fx:id="searchWord" style="-fx-background-color: transparent;" HBox.hgrow="ALWAYS">
-                                       <padding>
-                                          <Insets top="3.0" />
-                                       </padding>
+                                    <TextField fx:id="searchWord" HBox.hgrow="ALWAYS">
+                                       <HBox.margin>
+                                          <Insets left="5.0" />
+                                       </HBox.margin>
                                     </TextField>
                                     <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                                        <image>
