--- a/app/class/fxml/template.fxml
+++ b/app/class/fxml/template.fxml
@@ -136,6 +136,9 @@
                                        <padding>
                                           <Insets top="3.0" />
                                        </padding>
+                                       <HBox.margin>
+                                          <Insets left="5.0" />
+                                       </HBox.margin>
                                     </TextField>
                                     <ImageView fitHeight="26.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" smooth="false">
                                        <image>
