--- a/fxml/static/template_editor.fxml
+++ b/fxml/static/template_editor.fxml
@@ -4,6 +4,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.Separator?>
@@ -16,6 +17,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
@@ -638,38 +640,83 @@
                               <VBox spacing="20.0">
                                  <children>
                                     <Separator prefWidth="200.0" />
-                                    <VBox fillWidth="false" spacing="10.0">
+                                    <HBox alignment="CENTER_LEFT" spacing="20.0">
+                                       <VBox.margin>
+                                          <Insets left="20.0" right="20.0" />
+                                       </VBox.margin>
                                        <children>
-                                          <Label text="Main Settings">
+                                          <Label text="Word:">
                                              <styleClass>
                                                 <String fx:value="text-color1" />
                                                 <String fx:value="subtitle" />
                                              </styleClass>
                                           </Label>
-                                          <GridPane hgap="20.0" minWidth="300.0" vgap="10.0" VBox.vgrow="ALWAYS">
-                                            <columnConstraints>
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                              <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-                                            </columnConstraints>
-                                            <rowConstraints>
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                                            </rowConstraints>
+                                          <HBox alignment="CENTER_LEFT" spacing="10.0" styleClass="editor-container" HBox.hgrow="ALWAYS">
                                              <children>
-                                                <Label maxHeight="1.7976931348623157E308" styleClass="text-color1" text="Character" />
-                                                <Label maxHeight="1.7976931348623157E308" styleClass="text-color1" text="Ascii format" GridPane.rowIndex="1" />
-                                                <TextField minHeight="27.0" styleClass="bordered-textfield" GridPane.columnIndex="1" />
-                                                <TextField minHeight="27.0" styleClass="bordered-textfield" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                                <FlowPane prefWrapLength="0.0" HBox.hgrow="ALWAYS">
+                                                   <children>
+                                                      <HBox alignment="CENTER_LEFT" prefHeight="0.0" spacing="5.0" styleClass="editor-item">
+                                                         <children>
+                                                            <CheckBox mnemonicParsing="false" />
+                                                            <ComboBox />
+                                                            <Button mnemonicParsing="false">
+                                                               <graphic>
+                                                                  <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                                                     <image>
+                                                                        <Image url="@../icons/cross.png" />
+                                                                     </image>
+                                                                  </ImageView>
+                                                               </graphic>
+                                                            </Button>
+                                                            <Separator orientation="VERTICAL" prefHeight="200.0" />
+                                                         </children>
+                                                      </HBox>
+                                                      <HBox alignment="CENTER_LEFT" prefHeight="0.0" spacing="5.0" styleClass="editor-item">
+                                                         <children>
+                                                            <CheckBox mnemonicParsing="false" />
+                                                            <ComboBox />
+                                                            <Button mnemonicParsing="false">
+                                                               <graphic>
+                                                                  <ImageView fitHeight="18.0" fitWidth="18.0" pickOnBounds="true" preserveRatio="true">
+                                                                     <image>
+                                                                        <Image url="@../icons/cross.png" />
+                                                                     </image>
+                                                                  </ImageView>
+                                                               </graphic>
+                                                            </Button>
+                                                            <Separator orientation="VERTICAL" prefHeight="200.0" />
+                                                         </children>
+                                                      </HBox>
+                                                   </children>
+                                                </FlowPane>
+                                                <Button graphicTextGap="0.0" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" styleClass="editor-add">
+                                                   <graphic>
+                                                      <ImageView fitHeight="22.0" fitWidth="22.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../icons/add.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </graphic>
+                                                   <font>
+                                                      <Font size="1.0" />
+                                                   </font>
+                                                </Button>
                                              </children>
-                                             <VBox.margin>
-                                                <Insets left="20.0" right="20.0" />
-                                             </VBox.margin>
-                                             <padding>
-                                                <Insets top="10.0" />
-                                             </padding>
-                                          </GridPane>
+                                          </HBox>
                                        </children>
-                                    </VBox>
+                                    </HBox>
+                                    <Separator prefWidth="200.0" />
+                                    <GridPane>
+                                      <columnConstraints>
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                                      </columnConstraints>
+                                      <rowConstraints>
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                      </rowConstraints>
+                                    </GridPane>
                                  </children>
                               </VBox>
                            </content>
@@ -729,13 +776,13 @@
                      <top>
                         <HBox alignment="CENTER_LEFT" fillHeight="false" spacing="5.0" BorderPane.alignment="CENTER">
                            <children>
-                              <Label fx:id="headerName" text="Letter: ">
+                              <Label fx:id="headerName" text="Word: ">
                                  <styleClass>
                                     <String fx:value="title" />
                                     <String fx:value="text-color1" />
                                  </styleClass>
                               </Label>
-                              <Label fx:id="headerObject" graphicTextGap="0.0" style="-fx-text-fill: radial-gradient(focus-distance 0%, center 60% 100%, radius 80%, rgb(255, 0, 234), rgb(255, 187, 0));" text="∂">
+                              <Label id="temp" fx:id="headerObject" graphicTextGap="0.0" text="∂∫∑">
                                  <styleClass>
                                     <String fx:value="title" />
                                     <String fx:value="text-rainbow" />
