--- a/fxml/style/style.css
+++ b/fxml/style/style.css
@@ -77,3 +77,33 @@
     -fx-border-width: 1px;
     -fx-border-radius: 2px;
 }
+
+.text-transparent{
+    -fx-opacity: 0.4;
+}
+
+#temp{
+    -fx-text-fill:  linear-gradient(to bottom right, rgb(0, 26, 255), rgb(0, 153, 255));
+}
+
+.editor-container{
+    -fx-background-color: #141414;
+    -fx-background-radius: 12px;
+    -fx-padding: 5px, 10px, 5px, 8px;
+    -fx-border-radius: 12px;
+    -fx-border-width: 2px;
+    -fx-border-color: #ffffff13;
+}
+
+.editor-item{
+    -fx-background-color: #141414;
+    -fx-padding: 5px;
+    -fx-background-radius: 15px;
+}
+
+.editor-add{
+    -fx-padding: 2px;
+    -fx-background-radius: 10px;
+    -fx-background-color: radial-gradient(focus-distance 0%, center 100% 100%, radius 100%, rgba(255, 0, 234, 0.6), rgb(255, 187, 0, 0.6));
+    -fx-opacity: 0.8;
+}
