--- a/fxml/style/redefined.css
+++ b/fxml/style/redefined.css
@@ -120,6 +120,10 @@
     -fx-text-fill: #e9e9e9;
 }
 
+.combo-box .list-cell{
+    -fx-text-fill: #7c7c7c;
+}
+
 .color-picker{
     -fx-background-color: #141414;
     -fx-padding: 2px;
