--- a/fxml/style/style.css
+++ b/fxml/style/style.css
@@ -22,10 +22,6 @@
     -fx-background-color: transparent;
 }
 
-.text-color1{
-    -fx-text-fill: #c0c0c0;
-}
-
 .section1{
     -fx-background-color: transparent;
     -fx-padding: 0 2 0 10;
@@ -49,13 +45,30 @@
     -fx-background-color: #141414;
 }
 
+/* Text Styles */
+
 .title{
     -fx-font-size: 26px;
     -fx-font-weight: bold;
 }
 
+.subtitle{
+    -fx-font-size: 18px;
+    -fx-font-weight: bold;
+}
+
+.small-title{
+    -fx-font-size: 12px;
+    -fx-font-weight: bold;
+}
+
+.text-color1{
+    -fx-text-fill: #c0c0c0;
+}
+
 .text-rainbow{
     -fx-font-size: 32px;
+    -fx-text-fill: linear-gradient(to bottom right, rgb(0, 26, 255), rgb(0, 153, 255));
 }
 
 .editor-footer-buttons{
@@ -64,11 +77,6 @@
     -fx-padding: 5px 10px 5px 10px;
     -fx-background-radius: 10px;
     -fx-background-color: #141414;
-}
-
-.subtitle{
-    -fx-font-size: 18px;
-    -fx-font-weight: bold;
 }
 
 .bordered-textfield{
@@ -82,16 +90,12 @@
     -fx-opacity: 0.4;
 }
 
-#temp{
-    -fx-text-fill:  linear-gradient(to bottom right, rgb(0, 26, 255), rgb(0, 153, 255));
-}
-
 .editor-container{
     -fx-background-color: #141414;
     -fx-background-radius: 12px;
     -fx-padding: 5px, 10px, 5px, 8px;
     -fx-border-radius: 12px;
-    -fx-border-width: px;
+    -fx-border-width: 1px;
     -fx-border-color: #ffffff13;
 }
 
@@ -108,6 +112,7 @@
     -fx-opacity: 0.8;
 }
 
+/*
 .selection-button{
     -fx-padding : 5px 8px 5px 8px;
     -fx-background-color: transparent;
@@ -116,5 +121,24 @@
     -fx-border-width: 2px;
     -fx-border-color: #ffffff13;
     -fx-text-fill: #ffffffe7;
+    -fx-cursor: hand;
+}
+*/
+
+.slider-label{
+    -fx-text-fill: #c0c0c0;
+    -fx-font-size: 14px;
+}
+
+.generate-button{
+    -fx-padding : 5px 8px 5px 8px;
+    -fx-background-color: transparent;
+    -fx-background-radius: 5px;
+    -fx-border-radius: 5px;
+    -fx-border-width: 2px;
+    -fx-border-color: #ffffff13;
+    -fx-text-fill: #bcbcbc;
+    -fx-font-size: 14px;
+    -fx-font-weight: bold;
     -fx-cursor: hand;
 }
